--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www/:/var/www/certbot/:ro
-      - ./certbot/conf/live/team.roxl.ru/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - ./certbot/conf/live/team.roxl.ru/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
-        #- ./nginx/ssl/certificate.crt:/etc/nginx/ssl/certificate.crt
-        #- ./nginx/ssl/private_key.key:/etc/nginx/ssl/private_key.key
+      #- ./certbot/conf/live/<domain_name>/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      #- ./certbot/conf/live/<domain_name>/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
     depends_on:
       - gotrue
       
