--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,10 +18,10 @@ http {
 		listen 80 default_server;
 		listen [::]:80 default_server;
 
-		server_name team.roxl.ru www.team.roxl.ru;
+		server_name <domain_name> www.<domain_name>;
 
 		location / {
-			return 301 https://team.roxl.ru/request_uri;
+			return 301 https://<domain_name>/request_uri;
 		}
 	}
 
@@ -40,7 +40,7 @@ http {
 		listen [::]:443 default_server ssl;
 		http2 on;
 
-		server_name team.roxl.ru www.team.roxl.ru;
+		server_name <domain_name> www.<domain_name>;
 
 		ssl_certificate /etc/nginx/ssl/fullchain.pem;
 		ssl_certificate_key /etc/nginx/ssl/privkey.pem;
